# colcon-clean

./: .dockerignore  Dockerfile  README.md  codecov.yml  publish-python.yaml  requirements.txt  setup.cfg  setup.py  stdeb.cfg
.devcontainer/: devcontainer.json  on-create-command.sh  post-create-command.sh  update-content-command.sh
.github/workflows/: ci.yaml  test.yml
colcon_clean/: __init__.py
colcon_clean/base_handler/: __init__.py  build.py  install.py  log.py  test_result.py
colcon_clean/clean/: query.py
colcon_clean/subverb/: __init__.py  packages.py  workspace.py
colcon_clean/verb/: clean.py
test/: requirements.txt  spell_check.words  test_copyright_license.py  test_flake8.py  test_main.py  test_query.py  test_spell_check.py  test_verb.py
test/resources/: defaults.yaml
test/resources/test_src/test-repo/test-package-a/: setup.cfg
test/resources/test_src/test-repo/test-package-b/: setup.cfg
test/resources/test_src/test-repo/test-package-c/: setup.cfg
