[metadata]
name = colcon-clean
version = attr: colcon_clean.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/ruffsl/colcon-clean/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/ruffsl/colcon-clean/
author = Ruffin White
author_email = roxfoxpox@gmail.com
maintainer = Ruffin White
maintainer_email = roxfoxpox@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to clean package workspaces.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
  scantree
packages = find:
zip_safe = true

[options.extras_require]
test =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.packages.find]
exclude = test

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning:scantree.*:
    ignore::PendingDeprecationWarning:scspell:
junit_suite_name = colcon-clean

[options.entry_points]
colcon_clean.base_handler =
    build = colcon_clean.base_handler.build:BuildBaseHandler
    install = colcon_clean.base_handler.install:InstallBaseHandler
    log = colcon_clean.base_handler.log:LogBaseHandler
    test_result = colcon_clean.base_handler.test_result:TestResultBaseHandler
colcon_clean.subverb =
    workspace = colcon_clean.subverb.workspace:WorkspaceCleanSubverb
    packages = colcon_clean.subverb.packages:PackagesCleanSubverb
colcon_core.verb =
    clean = colcon_clean.verb.clean:CleanVerb

[flake8]
import-order-style = google

[coverage:run]
branch = True
