[metadata]
name = colcon-clean
version = attr: colcon_clean.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-clean/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-clean/
author = Ruffin White
author_email = roxfoxpox@gmail.com
maintainer = Ruffin White
maintainer_email = roxfoxpox@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to clean package workspaces.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.2
  scantree
  scandir;platform_system=='Windows'
packages = find:
zip_safe = true

[options.extras_require]
test =
  colcon-defaults
  colcon-package-information>=0.3.3
  colcon-package-selection>=0.2.10
  colcon-recursive-crawl
  colcon-test-result>=0.3.8
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2

[options.packages.find]
exclude = test

[tool:pytest]
filterwarnings =
    error
    ignore::DeprecationWarning:colcon_defaults:
    ignore::DeprecationWarning:flake8:
    ignore::DeprecationWarning:scantree.*:
    ignore:lib2to3 package is deprecated::scspell
    ignore::pytest.PytestUnraisableExceptionWarning
junit_suite_name = colcon-clean

[options.entry_points]
colcon_clean.base_handler =
    build = colcon_clean.base_handler.build:BuildBaseHandler
    install = colcon_clean.base_handler.install:InstallBaseHandler
    log = colcon_clean.base_handler.log:LogBaseHandler
    test_result = colcon_clean.base_handler.test_result:TestResultBaseHandler
colcon_clean.subverb =
    workspace = colcon_clean.subverb.workspace:WorkspaceCleanSubverb
    packages = colcon_clean.subverb.packages:PackagesCleanSubverb
colcon_core.extension_point =
    colcon_clean.base_handler = colcon_clean.base_handler:BaseHandlerExtensionPoint
    colcon_clean.subverb = colcon_clean.subverb:CleanSubverbExtensionPoint
colcon_core.verb =
    clean = colcon_clean.verb.clean:CleanVerb

[flake8]
import-order-style = google

[coverage:run]
branch = True
source = colcon_clean

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError()
    # Don't complain if non-runnable code isn't run:
    pass
